system-design-challenges-50/day14/ops/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-app-service
spec:
  selector:
    app: ecommerce-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: LoadBalancer
